--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,25 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;700&family=Roboto+Serif:opsz,wght@8..144,100;8..144,300;8..144,400;8..144,700&display=swap');
+
+*{
+  box-sizing: border-box;
+  font-size: 16px;
+  font-family: 'Quicksand';
+  margin: 0;
+  background-color: #f5f5f5;
+  color: #333;
+  text-decoration: none;
+}
+
+/* Liens */
+
+a {
+  color: #333;
+}
+
+.footer {
+  margin-top: 2rem;
+}
+
+.footer h2 {
+  margin-top: 1rem;
+}
