--- a/src/app/pages/grammar/grammar.component.html
+++ b/src/app/pages/grammar/grammar.component.html
@@ -3,4 +3,26 @@
     <a routerLink="/home" routerLinkActive="active">< Retour</a>
   </div>
   <app-title></app-title>
+  <div class="content">
+    <app-grammar-block
+      [title]="'La construction de phrases'"
+      [logo]="'/img/construction.jpg'"
+    ></app-grammar-block>
+    <app-grammar-block
+      [title]="'Les particules'"
+      [logo]="'/img/construction.jpg'"
+    ></app-grammar-block>
+    <app-grammar-block
+      [title]="'Les pronoms démonstratifs'"
+      [logo]="'/img/construction.jpg'"
+    ></app-grammar-block>
+    <app-grammar-block
+      [title]="'Les nombres'"
+      [logo]="'/img/numbers.jpg'"
+    ></app-grammar-block>
+    <app-grammar-block
+      [title]="'Les honorifiques'"
+      [logo]="'/img/honorific.png'"
+    ></app-grammar-block>
+  </div>
 </main>
