--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -20,7 +20,7 @@
       [url]="'/conjugation'"
     ></app-card>
     <app-card
-      [title]="'Vocabulary'"
+      [title]="'Vocabulaire'"
       [logo]="'/img/vocabulary.png'"
       [url]="'/vocabulary'"
     ></app-card>
