feat: vocabulary page - routing + popup in vocabulary sections

--- a/src/app/components/aside-block/aside-block.component.html
+++ b/src/app/components/aside-block/aside-block.component.html
@@ -3,11 +3,11 @@
     <h2>Sommaire</h2>
     <hr>
     <ul class="sumary">
-      <li><a href="#human_beings">Être humain</a></li>
+      <li><a routerLink="/vocabulary/human_beings" routerLinkActive="active">Être humain</a></li>
       <li><button>Vie quotidienne</button></li>
       <li><button>Jours, mois, années</button></li>
       <li><button>Météo</button></li>
-      <li><a href="#school">Ecole</a></li>
+      <li><a routerLink="/vocabulary/school" routerLinkActive="active">École</a></li>
       <li><button>Maison</button></li>
       <li><button>Famille/Amis</button></li>
       <li><button>Titres honorifiques</button></li>
