--- a/src/app/components/voc-block/voc-block.component.css
+++ b/src/app/components/voc-block/voc-block.component.css
@@ -1,8 +1,8 @@
 ul.voc {
-  margin-top: 1rem;
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  padding: 0;
 }
 
 ul.voc li {
@@ -11,6 +11,13 @@ ul.voc li {
 
 .translations {
   margin-top: 2rem;
+  background-color: white;
+  border-radius: 0.5rem;
+  padding: 2rem;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 h2 {
