--- a/src/app/pages/vocabulary/vocabulary.component.css
+++ b/src/app/pages/vocabulary/vocabulary.component.css
@@ -3,16 +3,11 @@ main {
   margin: 8rem 2rem 2rem 6rem;
 }
 
-div.home-link {
-  margin-bottom: 2rem;
-}
-
-div.home-link a {
-  font-size: 1.5rem;
-  margin-bottom: 5rem;
-}
-
 .vocabulary {
   display: flex;
-  gap: 15rem;
+  gap: 5rem;
+}
+
+.content-block {
+  width: fit-content;
 }
