--- a/src/app/pages/vocabulary/vocabulary.component.html
+++ b/src/app/pages/vocabulary/vocabulary.component.html
@@ -1,20 +1,11 @@
 <main>
-  <div class="home-link">
-    <a routerLink="/home" routerLinkActive="active">< Retour</a>
-  </div>
   <app-title></app-title>
   <div class="vocabulary">
     <app-aside-block></app-aside-block>
-    <div class="content-block">
+    <div class="content-block" *ngIf="word_list.length > 0">
       <app-voc-block
-        id="human_beings"
-        [title]="'Etre humain'"
-        [content]="human_beings"
-      ></app-voc-block>
-      <app-voc-block
-        id="school"
-        [title]="'Ecole'"
-        [content]="school"
+        [title]="word_list_title"
+        [content]="word_list"
       ></app-voc-block>
     </div>
   </div>
