feat: home button + delete of return link + routing

--- a/src/app/components/title/title.component.html
+++ b/src/app/components/title/title.component.html
@@ -1,5 +1,5 @@
-<!--<div class="header">-->
-<!--  <a routerLink="/home" routerLinkActive="active">< Retour</a>-->
+<!--<div class="home-link" *ngIf="displayReturn">-->
+<!--  <a routerLink="/" routerLinkActive="active">< Retour</a>-->
 <!--</div>-->
 <div class="title">
   <h1 class="french">{{current_title}}</h1>
