--- a/src/app/components/title/title.component.css
+++ b/src/app/components/title/title.component.css
@@ -33,3 +33,12 @@ h1 {
   width: 100%;
   margin-right: 6rem;
 }
+
+div.home-link {
+  margin-bottom: 2rem;
+
+  a {
+    font-size: 1.5rem;
+    margin-bottom: 5rem;
+  }
+}
