--- a/src/app/pages/keyboard/keyboard.component.css
+++ b/src/app/pages/keyboard/keyboard.component.css
@@ -1,13 +1,12 @@
 
 main {
   margin: 8rem 2rem 2rem 6rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
-div.home-link {
-  margin-bottom: 2rem;
-}
-
-div.home-link a {
-  font-size: 1.5rem;
-  margin-bottom: 5rem;
+img {
+  align-self: center;
+  justify-self: center;
 }
